Validator/Tests/AbstractClassValidatorFrameworkTests/Fixtures/Integration/Invalid/ExpressionCall/AbstractInstantiation.swift
class BadInstantiation {

    var child: ChildAbstract {
        return ChildAbstract()
    }
}
